tests/errors/cpp_err3.f90
program cpp_err3
#define f(x) x
#if f(2 < 1+2
#endif
print *, 'OK'
end program
